# contextweave

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  contextweave.weave.md  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: agentdrive-auto-pr.yml
cli/: main.py
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  FEATURES.md  TECH-STACK.md
scripts/: setup.sh
services/api/: main.py  routes.py
services/graph/: engine.py
services/parser/: parser.py
services/query/: engine.py
services/shared/: config.py  models.py
services/sync/: watcher.py
tests/: conftest.py  test_api.py  test_e2e.py  test_graph.py  test_parser.py  test_query.py  test_sync.py
